[package]
name = "rza1"
version = "0.1.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "CC0-1.0"
keywords = ["arm", "register", "peripheral"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for the Renesas RZ/A1 MPU family"
repository = "https://github.com/rz-rs/rza1"
include = ["/src", "/README.md"]

[features]
adc = []
bsc = []
ceu = []
cpg = []
disc = []
dmac = []
dvdec = []
ether = []
flctl = []
gpio = []
ieb = []
inb = []
intc = []
irda = []
jcu = []
l2c = []
lin = []
lvds = []
mlb = []
mmc = []
mtu2 = []
ostm = []
pfv = []
pwm = []
riic = []
romdec = []
rscan = []
rspi = []
rtc = []
scif = []
scim = []
scux = []
sdg = []
spdif = []
spibsc = []
ssif = []
usb20 = []
vdc5 = []
wdt = []

[dependencies]
bare-metal = "0.1.0"
vcell = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = []
